# TARA

./: .dockerignore  .env.example  ARCHITECTURE.md  DOCKER-SETUP.md  QUICKSTART.md  README.md  docker-compose.hub.yml  docker-compose.yml  start-tara.bat  start-tara.sh
TARA - backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
TARA - backend/.claude/: settings.local.json
TARA - backend/.github/workflows/: ci.yml
TARA - backend/alembic/: env.py
TARA - backend/app/: main.py
TARA - backend/app/frontend/: index.html
TARA - backend/app/platform/: db.py  dependencies.py  mixins.py  models_registry.py  security.py  settings.py
TARA - backend/app/tasks/: celery_app.py  resume_tasks.py
TARA - backend/docs/: API_REFERENCE.md  MODULES.md  POSTMAN_GUIDE.md
TARA - backend/docs/.obsidian/: workspace.json
TARA - backend/docs/api/: README.md
TARA - backend/docs/database/: README.md  activity_events.md  candidate_resumes.md  candidates.md  client_contacts.md  client_vendor_links.md  clients.md  job_route_transitions.md  job_routes.md  jobs.md  revoked_tokens.md  roles.md  super_admin_events.md  super_admins.md  tenants.md  user_roles.md  users.md  vendor_contacts.md  vendors.md
TARA - backend/postman/: TARA-ATS-Backend.postman_collection.json  TARA-ATS-Local.postman_environment.json
TARA - backend/tests/: conftest.py
TARA - backend/tests/integration/: test_auth_and_mapping.py  test_candidates_hr_notes.py  test_candidates_resumes_reporting.py  test_clients_contacts.py  test_job_application_status.py  (+7 more)
(+307 files in other folders)
